Add info to swagger
